ボタン内の文字を変更

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="modalOverlay" class="modal-overlay"> <!-- modal→画面の上に重ねて表示される、一時的なウィンドウ -->
         <div class="modal-content">
             <p id="modalOverview"></p>
-            <button id="modalClose">閉じる</button>
+            <button id="modalClose">close</button>
         </div>
     </div>
     <script type="module" src="./js/script.js"></script>
